--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
