--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "sass": "^1.81.0",
     "spotify-web-api-js": "^1.5.2"
   },
