maked a profilebutton with a dropdown

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,13 +14,18 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "typeRoots": ["node_modules/@types"],
+    "types": ["spotify-web-playback-sdk"]
   },
-  "include": ["src"]
+ "include": ["src", "src/types/global.d.ts"]
 }
