--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.6",
     "sass": "^1.81.0",
     "spotify-web-api-js": "^1.5.2"
