--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.6",
     "sass": "^1.83.0",
-    "spotify-web-api-js": "^1.5.2"
+    "spotify-web-api-js": "^1.5.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
