--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_SPOTIFY_CLIENT_ID=98b10d7ab0db4bd8bd4f8cfd3f85f636
 VITE_SPOTIFY_CLIENT_SECRET=d3fe1304dea1450289bf9e4d3990d10e
-VITE_SPOTIFY_REDIRECT_URI=http://localhost:5173/callback
+VITE_SPOTIFY_REDIRECT_URI=https://mydailymusic.netlify.app/callback
